--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -26,8 +26,8 @@ jobs:
         run: |
           aws s3 sync frontend/ s3://receiptly.elouajidi.click/ --delete
 
-      - name: Invalidate CloudFront cache
-        run: |
-          aws cloudfront create-invalidation \
-            --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
-            --paths "/*"
+#      - name: Invalidate CloudFront cache
+#        run: |
+#          aws cloudfront create-invalidation \
+#            --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
+#            --paths "/*"
