--- a/.github/workflows/deploy-generatePresignedUrl.yml
+++ b/.github/workflows/deploy-generatePresignedUrl.yml
@@ -18,7 +18,7 @@ jobs:
           mkdir build
           cp lambda/generatePresignedUrl.py build/
           cd build
-          zip -r ../presignedUrlpresignedUrl.zip .
+          zip -r ../presignedUrl.zip .
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
